# QtPvz

./: .gitconfig  .gitignore  CMakeLists.txt  CMakeLists.txt.user.32b9fd9  CMakeLists.txt.user.700c9e0  CMakeLists.txt.user.a286cba  LICENSE  Makefile  README.md  action.cpp  choogq.cpp  choogq.h  choogq.ui  choose.cpp  choose.h  choose.ui  cmake_install.cmake  config.cpp  draw.cpp  game.cpp  game.h  game_ai.cpp  ico.rc  icons.qrc  idea.txt  logo.icns  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myglwidget.cpp  myglwidget.h  mythread.cpp  mythread.h  mytimer.cpp  mytimer.h  other.cpp  other.h  other.ui  qrc_iconstmp.cpp  (+2 more)
.cache/clangd/index/: action.cpp.524F334E0E9EADC5.idx  choogq.cpp.481ECB436B5A5FCF.idx  choogq.h.BB0E1A9C429CA9E8.idx  choose.cpp.31F6B9B3287DC762.idx  choose.h.0A71602D03629F39.idx  config.cpp.6B7EF96310F57BB6.idx  draw.cpp.A42824596D00E38E.idx  game.cpp.269291CCB6069FC5.idx  game.h.0396DD433B0428E5.idx  game_ai.cpp.CF47C1972218EC3F.idx  main.cpp.725FF340EC513FD4.idx  mainwindow.cpp.9F6A0B62ACB98913.idx  mainwindow.h.A80D245B967847E4.idx  myglwidget.cpp.90E3E187DADCBDD6.idx  myglwidget.h.E0AC0858A1BE2BA6.idx  mythread.cpp.5465759BB2DFF40E.idx  mythread.h.1FB1E9759DA33130.idx  other.cpp.7AB59EA1FE42D731.idx  other.h.A396F07379F0136A.idx  stdafx.h.1F0C2DD85232C2DD.idx
android/: AndroidManifest.xml
icons/: 138_2.png.old  142.png~  15.png.old  275.png.old
icons/old/: 103.png.old  138.png.old  145.png.old  146.png.old  15.png.old  269.png.old  85.png.old  86.png.old  89.png.old
tujian/: tujian.md
